# FUSE_file_system

./: .gitignore  CMakeLists.txt  Makefile  README.md  blocks.h  directory.c  directory.h  hw12-yifan.pem  iblock.c  iblock.h  inode.c  inode.h  inodebit.h  metadata.h  nufs  nufs.c  pages.c  pages.h  report.txt  slist.c  slist.h  storage.c  storage.h  superblock.c  superblock.h  test.t  util.h
hints/: blocks.h  directory.h
mnt/: 2k.txt  40k.txt
